commenting and cleanup

--- a/src/SatelliteSoilMoisture/PullMoistureData.ipynb
+++ b/src/SatelliteSoilMoisture/PullMoistureData.ipynb
@@ -32,12 +32,23 @@
     "\n",
     "TABLE = \"soil_moisture\"\n",
     "\n",
+    "# loading environment variables\n",
     "load_dotenv()\n",
-    "PG_USER = os.getenv(\"POSTGRES_USER\", \"\")\n",
-    "PG_PW = os.getenv(\"POSTGRES_PW\", \"\")\n",
-    "PG_DB = os.getenv(\"POSTGRES_DB\", \"\")\n",
-    "PG_ADDR = os.getenv(\"POSTGRES_ADDR\", \"\")\n",
-    "PG_PORT = os.getenv(\"POSTGRES_PORT\", 5432)"
+    "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
+    "PG_PW = os.getenv(\"POSTGRES_PW\")\n",
+    "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
+    "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
+    "PG_PORT = os.getenv(\"POSTGRES_PORT\")\n",
+    "\n",
+    "if (\n",
+    "    PG_DB is None\n",
+    "    or PG_ADDR is None\n",
+    "    or PG_PORT is None\n",
+    "    or PG_USER is None\n",
+    "    or PG_PW is None\n",
+    "):\n",
+    "    # updateLog(LOG_FILE, \"Missing database credentials\")\n",
+    "    raise ValueError(\"Environment variables not set\")"
    ]
   },
   {
@@ -48,6 +59,7 @@
    "source": [
     "queryHandler = SoilMoistureQueryHandler()\n",
     "\n",
+    "# connect to database\n",
     "db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "conn = db.connect()\n",
     "\n",
@@ -60,6 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# query to pull ag_region from database\n",
     "query = sq.text(\"select cr_num, car_uid, geometry FROM public.census_ag_regions\")\n",
     "agRegions = gpd.GeoDataFrame.from_postgis(\n",
     "    query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
@@ -72,6 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# path to main folder which contains all the folders for each year\n",
     "folder_names = os.listdir(MAIN_FOLDER_PATH)"
    ]
   },
@@ -114,8 +128,8 @@
     "            ],\n",
     "            inplace=True,\n",
     "        )\n",
-    "        df.rename(columns={df.columns[0]: \"date\"}, inplace=True)\n",
-    "        df.rename(columns={df.columns[3]: \"soil_moisture\"}, inplace=True)\n",
+    "        df.rename(columns={\"time\": \"date\"}, inplace=True)\n",
+    "        df.rename(columns={\"sm\": \"soil_moisture\"}, inplace=True)\n",
     "        df = df[df[\"soil_moisture\"].notna()]\n",
     "\n",
     "        df = gpd.GeoDataFrame(\n",
@@ -138,6 +152,7 @@
     "\n",
     "        df.drop(columns=[\"index\"], inplace=True)\n",
     "\n",
+    "        # insert data into database\n",
     "        df.to_sql(TABLE, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
     "    print(folder_name + \" end\")"
    ]
