--- a/src/SatelliteSoilMoisture/PullSampleMoistureData.ipynb
+++ b/src/SatelliteSoilMoisture/PullSampleMoistureData.ipynb
@@ -33,12 +33,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# loading environment variables\n",
     "load_dotenv()\n",
-    "PG_USER = os.getenv(\"POSTGRES_USER\", \"\")\n",
-    "PG_PW = os.getenv(\"POSTGRES_PW\", \"\")\n",
-    "PG_DB = os.getenv(\"POSTGRES_DB\", \"\")\n",
-    "PG_ADDR = os.getenv(\"POSTGRES_ADDR\", \"\")\n",
-    "PG_PORT = os.getenv(\"POSTGRES_PORT\", 5432)"
+    "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
+    "PG_PW = os.getenv(\"POSTGRES_PW\")\n",
+    "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
+    "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
+    "PG_PORT = os.getenv(\"POSTGRES_PORT\")\n",
+    "\n",
+    "if (\n",
+    "    PG_DB is None\n",
+    "    or PG_ADDR is None\n",
+    "    or PG_PORT is None\n",
+    "    or PG_USER is None\n",
+    "    or PG_PW is None\n",
+    "):\n",
+    "    # updateLog(LOG_FILE, \"Missing database credentials\")\n",
+    "    raise ValueError(\"Environment variables not set\")"
    ]
   },
   {
@@ -47,12 +58,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# path to sample data\n",
     "netcdf_file_path = \"/data/common/Images/2004/ESACCI-SOILMOISTURE-L3S-SSMV-COMBINED-20040605000000-fv07.1.nc\"\n",
     "queryHandler = SoilMoistureQueryHandler()\n",
     "\n",
+    "# connect to database\n",
     "db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "conn = db.connect()\n",
     "\n",
+    "# create table\n",
     "queryHandler.createSoilMoistureTableReq(db)"
    ]
   },
@@ -62,6 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# query to pull ag_region from database\n",
     "query = sq.text(\"select cr_num, car_uid, geometry FROM public.census_ag_regions\")\n",
     "agRegions = gpd.GeoDataFrame.from_postgis(\n",
     "    query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
@@ -74,6 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reading database\n",
     "dataset = xr.open_dataset(netcdf_file_path)\n",
     "df = (\n",
     "    dataset.to_dataframe().reset_index()\n",
@@ -89,8 +105,8 @@
    "outputs": [],
    "source": [
     "df.drop(columns=[\"flag\", \"freqbandID\", \"dnflag\", \"mode\", \"sensor\", \"t0\"], inplace=True)\n",
-    "df.rename(columns={df.columns[0]: \"date\"}, inplace=True)\n",
-    "df.rename(columns={df.columns[3]: \"soil_moisture\"}, inplace=True)\n",
+    "df.rename(columns={\"time\": \"date\"}, inplace=True)\n",
+    "df.rename(columns={\"sm\": \"soil_moisture\"}, inplace=True)\n",
     "df = df[df[\"soil_moisture\"].notna()]"
    ]
   },
@@ -124,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
