setup car_uid labeling

--- a/src/ImportErgot/aggregateErgot.ipynb
+++ b/src/ImportErgot/aggregateErgot.ipynb
@@ -21,35 +21,12 @@
    "source": [
     "we also need a car_uid column to link the prov - district in this table to the ag region boundary table\n",
     "\n",
-    "the final ergot table has\n",
-    "\n",
-    "year\n",
-    "province\n",
-    "crop_district\n",
-    "car_uid\n",
-    "percent_true\n",
-    "has_ergot indicates if there is at least one true\n",
-    "sum_severity\n",
-    "previous_one_has_ergot indicates if there is at least one true last year\n",
-    "previous_one_severity\n",
-    "previous_two_has_ergot indicates if there is at least one true two years ago\n",
-    "previous_two_severity"
+    "the final ergot table has"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print()\n",
-    "neighbor has ergot\n",
-    "3rd year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +35,7 @@
      "text": [
       "e:\\Programming\\CGC_Grain_Outcome_Predictions\\env\\lib\\site-packages\\geopandas\\_compat.py:124: UserWarning: The Shapely GEOS version (3.11.1-CAPI-1.17.1) is incompatible with the GEOS version PyGEOS was compiled with (3.10.4-CAPI-1.16.2). Conversions between both will be slow.\n",
       "  warnings.warn(\n",
-      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_11524\\3364527155.py:2: DeprecationWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas still uses PyGEOS by default. However, starting with version 0.14, the default will switch to Shapely. To force to use Shapely 2.0 now, you can either uninstall PyGEOS or set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
+      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_23096\\3364527155.py:2: DeprecationWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas still uses PyGEOS by default. However, starting with version 0.14, the default will switch to Shapely. To force to use Shapely 2.0 now, you can either uninstall PyGEOS or set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
       "\n",
       "import os\n",
       "os.environ['USE_PYGEOS'] = '0'\n",
@@ -82,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +248,7 @@
        "[158699 rows x 6 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,14 +268,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# calculate the car_uid\n",
     "car_uids = []\n",
     "for index, row in ergotSamples.iterrows():\n",
-    "    uid = "
+    "    uid = row['crop_district']\n",
+    "\n",
+    "    if row['province'] == 'MB':\n",
+    "        uid += 4600\n",
+    "    if row['province'] == 'SK':\n",
+    "        uid = uid - 1\n",
+    "        uid += 4700\n",
+    "    if row['province'] == 'AB':\n",
+    "        uid = uid*10\n",
+    "        uid += 4800\n",
+    "\n",
+    "    \n",
+    "    car_uids.append(uid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ergotSamples['car_uid'] = car_uids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sample_id</th>\n",
+       "      <th>year</th>\n",
+       "      <th>province</th>\n",
+       "      <th>crop_district</th>\n",
+       "      <th>incidence</th>\n",
+       "      <th>severity</th>\n",
+       "      <th>car_uid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4810.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4810.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4810.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4810.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4810.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158694</th>\n",
+       "      <td>158695</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>SK</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4780.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158695</th>\n",
+       "      <td>158696</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>SK</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4780.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158696</th>\n",
+       "      <td>158697</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>SK</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4780.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158697</th>\n",
+       "      <td>158698</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4870.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158698</th>\n",
+       "      <td>158699</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4870.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>158699 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        sample_id  year province  crop_district  incidence  severity  car_uid\n",
+       "0               1  1995       AB            1.0      False       NaN   4810.0\n",
+       "1               2  1995       AB            1.0      False       NaN   4810.0\n",
+       "2               3  1995       AB            1.0      False       NaN   4810.0\n",
+       "3               4  1995       AB            1.0      False       NaN   4810.0\n",
+       "4               5  1995       AB            1.0      False       NaN   4810.0\n",
+       "...           ...   ...      ...            ...        ...       ...      ...\n",
+       "158694     158695  2022       SK           81.0      False       NaN   4780.0\n",
+       "158695     158696  2022       SK           81.0      False       NaN   4780.0\n",
+       "158696     158697  2022       SK           81.0      False       NaN   4780.0\n",
+       "158697     158698  2022       AB            7.0      False       NaN   4870.0\n",
+       "158698     158699  2022       AB            7.0      False       NaN   4870.0\n",
+       "\n",
+       "[158699 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ergotSamples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# year                  ######\n",
+    "# province              ######\n",
+    "# crop_district         ######\n",
+    "# car_uid               ######\n",
+    "# percent_true\n",
+    "# has_ergot indicates if there is at least one true\n",
+    "# sum_severity\n",
+    "# previous_one_has_ergot indicates if there is at least one true last year\n",
+    "# previous_one_severity\n",
+    "# previous_two_has_ergot indicates if there is at least one true two years ago\n",
+    "# previous_two_severity\n",
+    "# previous_three_severity\n",
+    "# bordering agRegion has Ergot"
    ]
   }
  ],
