min, max and mean for all attributes

--- a/src/WeatherStation/aggregateDly.ipynb
+++ b/src/WeatherStation/aggregateDly.ipynb
@@ -755,16 +755,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df = df.groupby([\"district\", \"date\"]).agg({\"max_temp\": \"mean\", \"min_temp\": \"mean\", \"total_rain\": \"mean\", \"total_snow\": \"mean\",\"total_precip\": \"mean\"}).reset_index()"
+    "final_df = df.groupby([\"district\", \"date\"]).agg({\"max_temp\": \"mean\", \"min_temp\": \"mean\", \"mean_temp\": \"mean\", \"total_rain\": [\"min\", \"max\", \"mean\"], \"total_snow\": [\"min\", \"max\", \"mean\"],\"total_precip\": [\"min\", \"max\", \"mean\"]}).reset_index()\n",
+    "final_df.columns = [  # type: ignore\n",
+    "    \"district\",\n",
+    "    \"date\",\n",
+    "    \"max_temp\",\n",
+    "    \"min_temp\",\n",
+    "    \"mean_temp\",\n",
+    "    \"min_rain\",\n",
+    "    \"max_rain\",\n",
+    "    \"mean_rain\",\n",
+    "    \"min_snow\",\n",
+    "    \"max_snow\",\n",
+    "    \"mean_snow\",\n",
+    "    \"min_precip\",\n",
+    "    \"max_precip\",\n",
+    "    \"mean_precip\"\n",
+    "    \n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -792,9 +809,16 @@
        "      <th>date</th>\n",
        "      <th>max_temp</th>\n",
        "      <th>min_temp</th>\n",
-       "      <th>total_rain</th>\n",
-       "      <th>total_snow</th>\n",
-       "      <th>total_precip</th>\n",
+       "      <th>mean_temp</th>\n",
+       "      <th>min_rain</th>\n",
+       "      <th>max_rain</th>\n",
+       "      <th>mean_rain</th>\n",
+       "      <th>min_snow</th>\n",
+       "      <th>max_snow</th>\n",
+       "      <th>mean_snow</th>\n",
+       "      <th>min_precip</th>\n",
+       "      <th>max_precip</th>\n",
+       "      <th>mean_precip</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -804,8 +828,15 @@
        "      <td>1992-12-01</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>-6.200000</td>\n",
+       "      <td>-2.100000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1.1</td>\n",
        "      <td>1.100000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -814,8 +845,15 @@
        "      <td>1992-12-02</td>\n",
        "      <td>-5.900000</td>\n",
        "      <td>-15.700000</td>\n",
+       "      <td>-10.800000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -824,8 +862,15 @@
        "      <td>1992-12-05</td>\n",
        "      <td>-3.000000</td>\n",
        "      <td>-16.000000</td>\n",
+       "      <td>-9.500000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -834,8 +879,15 @@
        "      <td>1992-12-06</td>\n",
        "      <td>-7.500000</td>\n",
        "      <td>-20.600000</td>\n",
+       "      <td>-14.100000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -844,12 +896,26 @@
        "      <td>1992-12-07</td>\n",
        "      <td>-9.500000</td>\n",
        "      <td>-19.400000</td>\n",
+       "      <td>-14.500000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -864,8 +930,15 @@
        "      <td>2022-12-27</td>\n",
        "      <td>-16.286667</td>\n",
        "      <td>-20.503333</td>\n",
+       "      <td>-18.380000</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>0.246667</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.2</td>\n",
        "      <td>2.946667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -874,8 +947,15 @@
        "      <td>2022-12-28</td>\n",
        "      <td>-13.950000</td>\n",
        "      <td>-19.213333</td>\n",
+       "      <td>-16.590000</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.4</td>\n",
        "      <td>0.013333</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>0.553333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -884,8 +964,15 @@
        "      <td>2022-12-29</td>\n",
        "      <td>-11.080000</td>\n",
        "      <td>-20.066667</td>\n",
+       "      <td>-15.566667</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.8</td>\n",
        "      <td>0.123333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -894,8 +981,15 @@
        "      <td>2022-12-30</td>\n",
        "      <td>-9.356667</td>\n",
        "      <td>-18.296667</td>\n",
+       "      <td>-13.830000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
        "      <td>0.010000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -904,46 +998,66 @@
        "      <td>2022-12-31</td>\n",
        "      <td>-9.473333</td>\n",
        "      <td>-18.583333</td>\n",
+       "      <td>-14.026667</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
        "      <td>0.010000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>921686 rows × 7 columns</p>\n",
+       "<p>921686 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        district       date   max_temp   min_temp  total_rain  total_snow  \\\n",
-       "0         4601.0 1992-12-01   2.000000  -6.200000         0.0    0.000000   \n",
-       "1         4601.0 1992-12-02  -5.900000 -15.700000         0.0    0.000000   \n",
-       "2         4601.0 1992-12-05  -3.000000 -16.000000         0.0    0.000000   \n",
-       "3         4601.0 1992-12-06  -7.500000 -20.600000         0.0    0.000000   \n",
-       "4         4601.0 1992-12-07  -9.500000 -19.400000         0.0    0.000000   \n",
-       "...          ...        ...        ...        ...         ...         ...   \n",
-       "921681    4870.0 2022-12-27 -16.286667 -20.503333         0.0    0.246667   \n",
-       "921682    4870.0 2022-12-28 -13.950000 -19.213333         0.0    0.013333   \n",
-       "921683    4870.0 2022-12-29 -11.080000 -20.066667         0.0    0.000000   \n",
-       "921684    4870.0 2022-12-30  -9.356667 -18.296667         0.0    0.000000   \n",
-       "921685    4870.0 2022-12-31  -9.473333 -18.583333         0.0    0.000000   \n",
+       "        district       date   max_temp   min_temp  mean_temp  min_rain  \\\n",
+       "0         4601.0 1992-12-01   2.000000  -6.200000  -2.100000       0.0   \n",
+       "1         4601.0 1992-12-02  -5.900000 -15.700000 -10.800000       0.0   \n",
+       "2         4601.0 1992-12-05  -3.000000 -16.000000  -9.500000       0.0   \n",
+       "3         4601.0 1992-12-06  -7.500000 -20.600000 -14.100000       0.0   \n",
+       "4         4601.0 1992-12-07  -9.500000 -19.400000 -14.500000       0.0   \n",
+       "...          ...        ...        ...        ...        ...       ...   \n",
+       "921681    4870.0 2022-12-27 -16.286667 -20.503333 -18.380000       0.0   \n",
+       "921682    4870.0 2022-12-28 -13.950000 -19.213333 -16.590000       0.0   \n",
+       "921683    4870.0 2022-12-29 -11.080000 -20.066667 -15.566667       0.0   \n",
+       "921684    4870.0 2022-12-30  -9.356667 -18.296667 -13.830000       0.0   \n",
+       "921685    4870.0 2022-12-31  -9.473333 -18.583333 -14.026667       0.0   \n",
        "\n",
-       "        total_precip  \n",
-       "0           1.100000  \n",
-       "1           0.000000  \n",
-       "2           0.000000  \n",
-       "3           0.000000  \n",
-       "4           0.000000  \n",
-       "...              ...  \n",
-       "921681      2.946667  \n",
-       "921682      0.553333  \n",
-       "921683      0.123333  \n",
-       "921684      0.010000  \n",
-       "921685      0.010000  \n",
+       "        max_rain  mean_rain  min_snow  max_snow  mean_snow  min_precip  \\\n",
+       "0            0.0        0.0       0.0       0.0   0.000000         1.1   \n",
+       "1            0.0        0.0       0.0       0.0   0.000000         0.0   \n",
+       "2            0.0        0.0       0.0       0.0   0.000000         0.0   \n",
+       "3            0.0        0.0       0.0       0.0   0.000000         0.0   \n",
+       "4            0.0        0.0       0.0       0.0   0.000000         0.0   \n",
+       "...          ...        ...       ...       ...        ...         ...   \n",
+       "921681       0.0        0.0       0.0       4.0   0.246667         0.0   \n",
+       "921682       0.0        0.0       0.0       0.4   0.013333         0.0   \n",
+       "921683       0.0        0.0       0.0       0.0   0.000000         0.0   \n",
+       "921684       0.0        0.0       0.0       0.0   0.000000         0.0   \n",
+       "921685       0.0        0.0       0.0       0.0   0.000000         0.0   \n",
        "\n",
-       "[921686 rows x 7 columns]"
+       "        max_precip  mean_precip  \n",
+       "0              1.1     1.100000  \n",
+       "1              0.0     0.000000  \n",
+       "2              0.0     0.000000  \n",
+       "3              0.0     0.000000  \n",
+       "4              0.0     0.000000  \n",
+       "...            ...          ...  \n",
+       "921681         7.2     2.946667  \n",
+       "921682         4.0     0.553333  \n",
+       "921683         0.8     0.123333  \n",
+       "921684         0.3     0.010000  \n",
+       "921685         0.3     0.010000  \n",
+       "\n",
+       "[921686 rows x 14 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
