--- a/src/WeatherStation/aggregateDly.ipynb
+++ b/src/WeatherStation/aggregateDly.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
     "]  # the year range we want to pull data from - ints\n",
     "uniqueDistricts = stationData[\"district\"].unique()\n",
     "\n",
-    "cols = agg_df.columns\n",
+    "cols = agg_df.columns.tolist()  # type: ignore\n",
     "cols.remove(\"district\")\n",
     "cols.remove(\"date\")"
    ]
@@ -271,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False)"
+    "# final_df.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False)"
    ]
   },
   {
