--- a/src/WeatherStation/aggregateHly.ipynb
+++ b/src/WeatherStation/aggregateHly.ipynb
@@ -16,11 +16,317 @@
     "sys.path.append(\"../\")\n",
     "from Shared.DataService import DataService  # type: ignore"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MIN_MONTH = 1\n",
+    "MAX_MONTH = 12\n",
+    "\n",
+    "MIN_YEAR = 1995\n",
+    "MAX_YEAR = 2022\n",
+    "TABLENAME = \"agg_hly_weather\"\n",
+    "\n",
+    "load_dotenv()\n",
+    "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
+    "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
+    "PG_PORT = os.getenv(\"POSTGRES_PORT\")\n",
+    "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
+    "PG_PW = os.getenv(\"POSTGRES_PW\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
+    "conn = db.connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pulling weather station data from the database\n",
+    "weatherDataQuery = sq.text(\n",
+    "    \"\"\"\n",
+    "    SELECT * FROM public.ab_hly_station_data\n",
+    "    UNION\n",
+    "    SELECT * FROM public.mb_hly_station_data\n",
+    "    UNION\n",
+    "    SELECT * FROM public.sk_hly_station_data;\n",
+    "    \"\"\"\n",
+    ")\n",
+    "\n",
+    "weatherData = pd.read_sql(weatherDataQuery, conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pulling station data from the database\n",
+    "stationDataQuery = sq.text(\n",
+    "    \"\"\"\n",
+    "    SELECT station_id, district FROM public.stations_dly\n",
+    "    WHERE district IS NOT NULL;\n",
+    "    \"\"\"\n",
+    ")\n",
+    "\n",
+    "stationData = pd.read_sql(stationDataQuery, conn)\n",
+    "stationData[[\"district\"]] = stationData[[\"district\"]].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# merge both the weather station data and the station data together\n",
+    "df = weatherData.merge(stationData, on=\"station_id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# aggregate the values in the dataframe by date and district\n",
+    "agg_df = (\n",
+    "    df.groupby([\"district\", \"year\", \"month\", \"day\"])\n",
+    "    .agg(\n",
+    "        {\n",
+    "            \"min_temp\": \"mean\",\n",
+    "            \"max_temp\": \"mean\",\n",
+    "            \"mean_temp\": \"mean\",\n",
+    "            \"min_dew_point_temp\": \"mean\",\n",
+    "            \"max_dew_point_temp\": \"mean\",\n",
+    "            \"mean_dew_point_temp\": \"mean\",\n",
+    "            \"min_humidex\": \"mean\",\n",
+    "            \"max_humidex\": \"mean\",\n",
+    "            \"mean_humidex\": \"mean\",\n",
+    "            \"total_precip\": [\"min\", \"max\", \"mean\"],\n",
+    "            \"min_rel_humid\": \"mean\",\n",
+    "            \"max_rel_humid\": \"mean\",\n",
+    "            \"mean_rel_humid\": \"mean\",\n",
+    "            \"min_stn_press\": \"mean\",\n",
+    "            \"max_stn_press\": \"mean\",\n",
+    "            \"mean_stn_press\": \"mean\",\n",
+    "            \"min_visibility\": \"mean\",\n",
+    "            \"max_visibility\": \"mean\",\n",
+    "            \"mean_visibility\": \"mean\",\n",
+    "        }\n",
+    "    )\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "# sets the column names for the aggregate dataframe\n",
+    "agg_df.columns = [  # type: ignore\n",
+    "    \"district\",\n",
+    "    \"year\",\n",
+    "    \"month\",\n",
+    "    \"day\",\n",
+    "    \"min_temp\",\n",
+    "    \"max_temp\",\n",
+    "    \"mean_temp\",\n",
+    "    \"min_dew_point_temp\",\n",
+    "    \"max_dew_point_temp\",\n",
+    "    \"mean_dew_point_temp\",\n",
+    "    \"min_humidex\",\n",
+    "    \"max_humidex\",\n",
+    "    \"mean_humidex\",\n",
+    "    \"min_precip\",\n",
+    "    \"max_precip\",\n",
+    "    \"mean_precip\",\n",
+    "    \"min_rel_humid\",\n",
+    "    \"max_rel_humid\",\n",
+    "    \"mean_rel_humid\",\n",
+    "    \"min_stn_press\",\n",
+    "    \"max_stn_press\",\n",
+    "    \"mean_stn_press\",\n",
+    "    \"min_visibility\",\n",
+    "    \"max_visibility\",\n",
+    "    \"mean_visibility\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agg_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# figure out the date range for date processing - puts all 365 days as MO-DA into dates\n",
+    "dates = []  # all 365 days as MO-DA - strings\n",
+    "\n",
+    "months = [\n",
+    "    str(month) for month in range(MIN_MONTH, MAX_MONTH + 1)\n",
+    "]  # the month range we want to pull data from - strings\n",
+    "for month in months:\n",
+    "    if len(month) == 1:\n",
+    "        month = \"0\" + month\n",
+    "\n",
+    "    numDays = calendar.monthrange(2001, int(month))[1]\n",
+    "    days = [str(day) for day in range(1, numDays + 1)]\n",
+    "\n",
+    "    for day in days:\n",
+    "        if len(day) == 1:\n",
+    "            day = \"0\" + day\n",
+    "\n",
+    "        dates.append(f\"{month}-{day}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "years = [\n",
+    "    year for year in range(MIN_YEAR, MAX_YEAR + 1)\n",
+    "]  # the year range we want to pull data from - ints\n",
+    "uniqueDistricts = stationData[\"district\"].unique()\n",
+    "\n",
+    "cols = agg_df.columns.tolist()  # type: ignore\n",
+    "cols.remove(\"district\")\n",
+    "cols.remove(\"year\")\n",
+    "cols.remove(\"month\")\n",
+    "cols.remove(\"day\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listForDF = (\n",
+    "    []\n",
+    ")  # loads all data where each row is its own dictionary so that it may added to a dataframe later (fast processing)\n",
+    "\n",
+    "for year in years:\n",
+    "    print(f\"Processing year: {year}\")\n",
+    "\n",
+    "    for district in uniqueDistricts:\n",
+    "        currData = {}  # for each year/district combination create a dictionary\n",
+    "\n",
+    "        # adds the year and district\n",
+    "        currData[\"year\"] = year\n",
+    "        currData[\"district\"] = district\n",
+    "\n",
+    "        for (\n",
+    "            date\n",
+    "        ) in (\n",
+    "            dates\n",
+    "        ):  # for each day we want to grab all attributes and establish them as columns i.e MO-DA:attribute\n",
+    "            dateComponents = date.split(\"-\")\n",
+    "            monthInt = int(dateComponents[0])\n",
+    "            dayInt = int(dateComponents[1])\n",
+    "\n",
+    "            currRow = agg_df.loc[\n",
+    "                (agg_df[\"year\"] == year)\n",
+    "                & (agg_df[\"month\"] == monthInt)\n",
+    "                & (agg_df[\"day\"] == dayInt)\n",
+    "                & (agg_df[\"district\"] == district)\n",
+    "            ]  # grab the row from the aggregated df\n",
+    "\n",
+    "            for col in cols:  # parse each of the desired columns\n",
+    "                currAttr = f\"{date}:{col}\"  # the current attribute which corresponds to the date and the column\n",
+    "                currVal = 0  # defaults as zero incase it does not exist\n",
+    "\n",
+    "                if len(currRow[col]) == 1:\n",
+    "                    currVal = currRow[\n",
+    "                        col\n",
+    "                    ].item()  # the current value from the loaded data\n",
+    "\n",
+    "                currData[currAttr] = currVal\n",
+    "\n",
+    "        listForDF.append(currData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df = pd.DataFrame(listForDF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# final_df.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.cleanup()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   },
   "orig_nbformat": 4
  },
