--- a/src/SatelliteCopernicus/pullCopernicusData.ipynb
+++ b/src/SatelliteCopernicus/pullCopernicusData.ipynb
@@ -383,7 +383,8 @@
     "            updateLog(LOG_FILE, f\"Added date attributes for {year}/{month}/{currDay}\\n\")\n",
     "\n",
     "            updateLog(\n",
-    "                LOG_FILE, f\"Adding rows {len(df.index)} data from {year}/{month}/{currDay} to the Database\\n\"\n",
+    "                LOG_FILE,\n",
+    "                f\"Adding rows {len(df.index)} data from {year}/{month}/{currDay} to the Database\\n\",\n",
     "            )\n",
     "            df.drop(columns=[\"index\"], inplace=True)\n",
     "            df.to_sql(TABLE, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
