--- a/src/importSoil/importSoil.ipynb
+++ b/src/importSoil/importSoil.ipynb
@@ -12,7 +12,7 @@
     "import os, sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from Shared.DataService import DataService  # type: ignore"
+    "from Shared.DataService import DataService"
    ]
   },
   {
@@ -40,7 +40,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
+    "if (\n",
+    "    PG_DB is None\n",
+    "    or PG_ADDR is None\n",
+    "    or PG_PORT is None\n",
+    "    or PG_USER is None\n",
+    "    or PG_PW is None\n",
+    "):\n",
+    "    raise ValueError(\"Environment variables not set\")\n",
+    "db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "conn = db.connect()"
    ]
   },
@@ -246,7 +254,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -260,9 +268,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "5b3ded1ccb95c1d9bd405e7b823d9e85424cde40fbb5985eb47e999ef50e15b4"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
